--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.data.mongodb.database=SPED
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri:mongodb+srv://spin-java-apps:ZI46QrIguIFMM3jn@cluster0.bgzlo.gcp.mongodb.net/SPED?retryWrites=true&w=majority
