--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
             <version>20140107</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.2.32</version>
+        </dependency>
         
     </dependencies>
 
